Fixed results overlay spacing

--- a/assets/sass/plugin_pse/_results-overlay.scss
+++ b/assets/sass/plugin_pse/_results-overlay.scss
@@ -25,22 +25,26 @@ div#pse-results-overlay {
     flex-direction: column;
     justify-content: stretch;
     align-items: stretch;
-    gap: 1rem;
     width: 90vw;
     height: 90vh;
     left: 5vw;
     top: 5vh;
     
+    & > * { padding: 0; margin: 0; }
+
     /// Page results header
     header#pse-results-header {
       
       display: flex;
       justify-content: center;
+      padding: 0;
       margin: 1rem;
       color: var(--pse-results-overlay-header-color);
             
       #pse-results-title {
         
+        padding: 0;
+        margin: 0;
         font-weight: var(--pse-results-overlay-header-font-weight);
         font-size: var(--pse-results-overlay-header-font-size);
         font-weight: var(--pse-results-overlay-header-font-weight);
@@ -61,7 +65,8 @@ div#pse-results-overlay {
     
     /// Page results item section
     section#pse-results-items {
-      
+      padding: 0;
+      margin: 0;
       flex-grow: 2;
       
       /// Page results list
@@ -73,12 +78,15 @@ div#pse-results-overlay {
         align-items: stretch;
         gap: 1rem;
         padding: 0;
-        margin: 1rem;
+        margin: 0 1rem;
         
-        & > * { padding: 0; margin: 0; }
+        
 
         /// Page results list item
         li.pse-result-list-item {
+          
+          padding: 0;
+          margin: 0;
           
           ///Result content wrapper
           article.pse-result-item-article {
@@ -87,11 +95,16 @@ div#pse-results-overlay {
             display: flex;
             flex-direction: column;
             align-items: stretch;
-            gap: 0.5rem;                   
+            gap: 0.5rem;
+            padding: 0;
+            margin: 0;            
             
             /// Result header
             header.pse-result-item-header {
             
+              padding: 0;
+              margin: 0;
+              
               /// Result title
               a.pse-result-item-title {
 
@@ -158,7 +171,6 @@ div#pse-results-overlay {
       grid-template-columns: 1fr auto 1fr;
       grid-template-areas: "previous . next";
       place-items: center;
-      padding-bottom: 2rem;
       
       a {
         
